<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">File Explorer</string>
    <string name="gb">GB</string>
    <string name="action_settings">Settings</string>
    <string name="explorer_file_button">File Management</string>
    <string name="inner_storage_name">Phone </string>
    <string name="sd_card_name">SD Card</string>
    <string name="usb_storage_name">USB Storage</string>
    <string name="loading_storage">Loading storage information</string>
    <string name="now_loading">Loading...</string>
    <string name="no_storage_message">No storage.</string>
    <string name="no_sd_card">No sd card</string>
    <string name="storage_info_title">%1$s %2$s/%3$s</string>
    <string name="file_manage_suffix_string">File Management</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_input_hint">Input key word here</string>
    <string name="search_label">Search</string>
    <string name="donut_title">Used</string>
    <string name="search_category_all">ALL</string>
    <string name="picture_text">PIC</string>
    <string name="music_text">MUSIC</string>
    <string name="video_text">VIDEO</string>
    <string name="doc_text">DOC</string>
    <string name="apk_text">APK</string>
    <string name="zip_text">ZIP</string>
    <string name="other_text">OTHERS</string>
    <string name="default_search_result_file_name">No File Name Displayed</string>
    <string name="default_search_result_file_path">No File Path Displayed</string>
    <string name="default_search_result_iamge_description">Default Image Description</string>
    <string name="open_file_no_activity_hint">No app installed to open it.</string>
    <string name="no_search_result">No Search Result</string>

    <!-- Strings for file list view -->
    <string name="default_file_title">FinOS :)</string>
    <string name="default_file_type">Default Type!</string>
    <string name="default_file_date">It is my birthday!</string>
    <string name="default_file_count">999 item(s)</string>
    <string name="show_word_item_single">" item"</string>
    <string name="show_word_item"> Items</string>
    <string name="show_word_selected">Selected </string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="select_all">Select All</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_success">Read FileList Successfully!</string>
    <string name="newfolder">New Folder</string>
    <string name="show_hidden_files">Show Hidden Files</string>
    <string name="hide_hidden_files">Hide Hidden Files</string>
    <string name="create_folder">New Folder</string>
    <string name="create_folder_message">Enter folder name</string>
    <string name="new_folder_name">New folder</string>
    <string name="rename_file">Rename</string>
    <string name="rename_file_message">Please input new file name</string>
    <string name="no_file">No File</string>
    <string name="sort">Sort By</string>
    <string name="sort_by_date">Date (new - old)</string>
    <string name="sort_by_name">Name (A - Z)</string>
    <string name="sort_by_size">Size (big - small)</string>
    <string name="sort_by_type">Type</string>
    <string name="send">Send</string>
    <string name="cannot_send_dir">Cannot send directory.</string>
    <string name="file_info">File Info</string>
    <string name="file_info_canread">Readable:</string>
    <string name="file_info_canwrite">Writable:</string>
    <string name="file_info_ishidden">Hidden:</string>
    <string name="file_info_location">Path:</string>
    <string name="file_info_modified">Modified:</string>
    <string name="file_info_size">Size:</string>
    <string name="file_size">%d Bytes</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_know">OK</string>
    <string name="rename">Rename</string>
    <string name="detail_information">Detail Information</string>
    <string name="create_file_fail">Create file failed.</string>
    <string name="invalid_file_name">Invalid file name!</string>
    <string name="hint_invalid_file_name">Invalid file name!</string>
    <string name="confirm_delete">Delete Confirm</string>
    <string name="confirm_delete_msg">Delete Selected Files?</string>
    <string name="delete">Delete</string>
    <string name="select_hint">Select a file first.</string>
    <string name="operation_processing_title">Operation processing</string>
    <string name="please_wait">Wait</string>
    <string name="cannot_move">You cannot move a folder into itself.</string>
    <string name="not_enough_space">Sorry, not enough space.</string>
    <string name="file_name_hint">%1$s words remain.</string>

    <!-- Strings from mi file explorer -->
    <string name="dialog_select_type">Select file type</string>
    <string name="dialog_type_text">Text</string>
    <string name="dialog_type_audio">Audio</string>
    <string name="dialog_type_video">Video</string>
    <string name="dialog_type_image">Image</string>
    <string name="title_activity_file_explorer_file_view">FileExplorer(recommended)</string>
    <string name="op_did_not_completed">Operation did not completed</string>
    <string name="file_operation_not_complete">Operation not totally completed</string>
    <string name="max_name_length_hint">File name too long!</string>
    <string name="file_name_already_exists">File name already exists!</string>
    <string name="loading">loading...</string>
    <string name="file_count">(%1$s)</string>
    <string name="storage_name">Storage:</string>
    <string name="choose_storage">Please Choose Storage:</string>
    <string name="un_select_all">Deselect All</string>
    <string name="extension_change_alert_title">Extension Change Alert</string>
    <string name="extension_change_alert_msg">Extension change may cause error. Continue anyway?</string>
    <string name="copy_ioe_detail">Task failed because of file IO exception.</string>
    <string name="no_need_sort">Only one file.</string>
    <string name="no_file_in_directory">No files！</string>
    <string name="external_storage_name">"USB Storage : "</string>
    <string name="rename_empty_string">Filename is invalid or empty, cannot rename.</string>
    <string name="file_not_exist">This file is not exist anymore.</string>
    <string name="hotknot">HotKnot</string>
    <string name="need_turn_on_hotknot">Please turn on hotknot first.</string>
    <string name="title_activity_hot_knot_dialog">HotKnotDialogActivity</string>
    <string name="hotknot_hint">Please close two phones with their faces and keep hotknot turning on.</string>
    <string name="cannot_copy_to_self">Cannot copy a directory to itself.</string>
    <string name="target_storage_is_full">Copy failed. Target storage is full.</string>
    <string name="storage_unit_gb">GB</string>
    <string name="storage_unit_mb">MB</string>
    <string name="storage_unit_kb">KB</string>


</resources>