<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"        
        >
    
    <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
         >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_info_location"
                android:padding="3dip"
                android:gravity="left"/>
                  
                <TextView
                    android:id="@+id/information_location"
                    android:layout_width="wrap_content"
                    android:paddingBottom="10dip"
                    android:paddingLeft="10dip"
                    android:layout_height="wrap_content" />        
        
    </LinearLayout>
    <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"        
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_info_size"
                android:padding="3dip"
                android:gravity="left" />
            <TextView
                android:id="@+id/information_size"
                android:layout_width="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="10dip"
                android:layout_height="wrap_content" /> 
       </LinearLayout>  
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/file_info_modified"
                android:padding="3dip"
                android:gravity="left" />
            <TextView
                android:id="@+id/information_modified"
                android:padding="3dip" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/file_info_canread"
                android:padding="3dip"
                android:gravity="left" />
            <TextView
                android:id="@+id/information_canread"
                android:padding="3dip"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/file_info_canwrite"
                android:padding="3dip"
                android:gravity="left" />
            <TextView
                android:id="@+id/information_canwrite"
                android:padding="3dip" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/file_info_ishidden"
                android:padding="3dip"
                android:gravity="left" />
            <TextView
                android:id="@+id/information_ishidden"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>
    </LinearLayout>
</ScrollView>